Different endpoint for registration + removed thoughtless "async"
