# server/main.py
@@ -1,7 +1,3 @@
-# generated by fastapi-codegen:
-#   filename:  openapi-improved.yaml
-#   timestamp: 2024-07-19T05:05:28+00:00
-
 from __future__ import annotations
 
 from typing import List, Optional
@@ -9,13 +5,13 @@ from functools import wraps
 
 from fastapi import FastAPI, HTTPException
 
-from .models import Credentials, Task, TaskNamePutRequest, TaskPostRequest
+from .models import Credentials, Task, TaskNamePutRequest, TaskPostRequest, UserPostRequest
 from .db import wrappers, helpers
 from . import daemon
 
 app = FastAPI(
     title='Supervisor Server API',
-    version='1.0',
+    version='0.0.1',
     description='The server-side of the Supervisor API',
 )
 
@@ -36,10 +32,9 @@ def search_tasks(pattern: Optional[str] = '*', limit: Optional[int] = 10) -> Lis
 
 @app.post('/task', response_model=None)
 @requires_validation
-async def create_task(body: TaskPostRequest) -> None:
+def create_task(body: TaskPostRequest) -> None:
     try: wrappers.create_task(body.credentials.id, body.name, body.desc)
     except helpers.DuplicationError as e: raise HTTPException(409, str(e))
-
 
 @app.delete('/task/{name}', response_model=None)
 @requires_validation
@@ -88,9 +83,9 @@ def get_user_link(id: str) -> str:
     if not out: raise HTTPException(404, 'User not found')
     return out
 
-@app.post('/user/{id}', response_model=str)
-def register_user(id: str, link: str = '') -> str:
-    try: key = wrappers.register_user(id, link)
+@app.post('/user', response_model=str)
+def register_user(body: UserPostRequest) -> str:
+    try: key = wrappers.register_user(body.id, body.link)
     except helpers.DuplicationError as e: raise HTTPException(409, str(e))
     return key
 
@@ -109,12 +104,13 @@ def start_task(body : Credentials, name: str) -> None:
     except helpers.PermissionError as e: raise HTTPException(403, str(e))
     except helpers.LogicError as e: raise HTTPException(500, str(e))
     wrappers.set_task_runner(body.id, name)
+    wrappers.task_dequeue(name) 
     wrappers.maintain_tasks(name, daemon.MAINTAIN_PERIOD)
 
 @app.delete('/task/{name}/run', response_model=None)
 @requires_validation
 def stop_task(body : Credentials, name: str) -> None:
-    try: wrappers.validate_task_update(body.id, name)
+    try: wrappers.validate_task_update(body.id, name) # works just as well 
     except helpers.NotFoundError as e: raise HTTPException(404, str(e))
     except helpers.PermissionError as e: raise HTTPException(403, str(e))
     wrappers.stop_task(name)
